--- a/note/src/index.css
+++ b/note/src/index.css
@@ -32,6 +32,7 @@ body {
   margin: 0;
   width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -39,21 +40,8 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
 
-button:hover {
-  border-color: #646cff;
-}
+
 
 button:focus,
 button:focus-visible {
@@ -66,11 +54,32 @@ button:focus-visible {
     background-color: #ffffff;
   }
 
-  a:hover {
-    color: #747bff;
-  }
+}
 
-  button {
-    background-color: #f9f9f9;
-  }
+.primary_button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #3bb77e;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  color: #ffffff;
+  margin-right: 1rem;
+}
+
+.secondary_button {
+  border-radius: 8px;
+  border: 1px solid #3bb77e;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  color: #3bb77e;
+  margin-right: 1rem;
 }
