--- a/typing/src/index.css
+++ b/typing/src/index.css
@@ -15,13 +15,17 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
 a:hover {
   color: #535bf2;
 }
 
-
+body {
+  width: 100%;
+  height: auto;
+}
 
 h1 {
   font-size: 2.2em;
